# BigData-project

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run.sh
data/: readme.md
data_models/: psql_model.json
naive_baseline/: means.ipynb
naive_baseline/submit/: means.json  metadata.json  run.py
notebooks/: eda.ipynb  first_look_on_data.ipynb
output/: hive_results.txt
output/hive/: hive_results.txt
output/hive/eda/: q1.csv  q2.csv  q3.csv  q4.csv  q5.csv
output/models/decision_tree/evaluate/: metrics_20250520_223344.json
output/models/decision_tree/importance/: lat_20250520_223348.csv  lon_20250520_223346.csv
output/models/gbt/evaluate/: metrics_20250521_000000.json
output/models/linear/evaluate/: metrics_20250520_223249.json
output/models/linear/importance/: lat_20250520_223253.csv  lon_20250520_223252.csv
output/models/random_forest/evaluate/: metrics_20250520_234309.json  (+1 more)
sql/: create_tables.sql
src/app/modelling/: Classification.ipynb  Data_analysis.ipynb  Data_analysisclassification.ipynb  Regression.ipynb  decision_tree.py  gbt.py  linear_regressor.py  ml_app.py  ml_app_classification.py  mlp.py  random_forest.py  run_classification.sh  run_distrib_ml.sh  run_regression.sh  run_trainings.sh
src/app/scripts/: add_columns_to_moscow.py  build_projectdb.py  create_hexses.py  create_locations.py  create_tables.sql  data_collection.sh  import_via_sqoop.sh  preprocessing.py
src/app/utils/: common.py  pg_connect.py
src/config/: configs.py
src/data/: data_collection.sh  readme.md
src/data/data_models/: psql_model.json
(+22 files in other folders)
