[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "fastparquet>=2024.11.0",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "h3>=4.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy==2.2.2",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.4",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "scikit-learn==1.6.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
]
